tests/ui/specialization/specialization-default-items-drop-coherence.current.stderr
error[E0119]: conflicting implementations of trait `Overlap` for type `u32`
  --> $DIR/specialization-default-items-drop-coherence.rs:26:1
   |
LL | impl Overlap for u32 {
   | -------------------- first implementation here
...
LL | impl Overlap for <u32 as Default>::Id {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: hi
  --> $DIR/specialization-default-items-drop-coherence.rs:26:1
   |
LL | trait Overlap {
   | ------------- built-in `dyn Overlap<Assoc = _>` implementation for this trait
...
LL | impl Overlap for <u32 as Default>::Id {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
